# bike-power-interval-analyzer

./: AGENTS.md  DEVELOPMENT.md  README.md  TUTORIAL.md  bike-intervals  pyproject.toml  run.py
src/bike_power_interval_analyzer/: __init__.py  cli.py  duration.py  intervals.py  models.py  output.py  parsers.py
tests/: test_duration.py  test_intervals.py  test_tcx_parser_and_cli.py  test_wrapper_script.py  test_zip_parser.py
