[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bike-power-interval-analyzer"
version = "0.1.0"
description = "Identify top power and heart-rate intervals from TCX and FIT files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Bike Power Interval Analyzer" }]
dependencies = [
  "fitdecode>=0.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "hypothesis>=6.0",
]

[project.scripts]
bike-intervals = "bike_power_interval_analyzer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
